# vent-box

./: .envrc  .gitignore  AGENTS.md  README.md  app.py  env.example  langgraph.json  pyproject.toml  venting_list.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
graph/: main.py  vector_store.py
grievances/: 20251023-190937-level3.md  20251023-193138-level3.md  20251023-194544-level4.md  20251023-194642-level2.md  20251023-194930-level4.md  20251023-200053-level5.md  20251024-170726-level3.md  20251024-171005-level3.md  20251024-171055-level3.md  20251024-171145-level3.md  20251024-171247-level2.md  20251024-171332-level3.md  20251024-171629-level3.md  20251024-171703-level3.md  20251024-172940-level3.md  20251024-173822-level4.md  20251024-181507-level3.md  20251024-181612-level5.md  20251024-182346-level5.md  20251024-182423-level5.md  20251024-182909-level2.md  20251024-182954-level3.md  20251024-183110-level5.md  20251024-183240-level3.md  20251024-183319-level5.md  20251024-184707-level3.md  20251024-184804-level5.md  20251025-143812-level2.md  20251025-155427-level5.md  20251025-155457-level5.md  20251025-155804-level5.md  20251025-160327-level5.md  20251025-160359-level5.md  20251025-160510-level5.md  20251025-160541-level5.md  20251025-160607-level5.md  20251025-162159-level5.md  20251025-162248-level5.md  20251025-175435-level3.md  20251025-175630-level5.md  (+1 more)
grievances/tickets/: build-pipeline-monday-instability.md  (+7 more)
scripts/: add_grievance.py  clear_unused_tags.sh
(+1 files in other folders)
