[project]
name = "chatbot-base"
version = "0.1.0"
description = "A blank canvas for building chatbots with langgraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "langgraph",
    "langchain-openai",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "ruff>=0.5",
]
