[project]
name = "chatbot-base"
version = "0.1.0"
description = "A venting box that transforms your pain points into actionable items"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "langgraph",
    "langchain-openai",
    "python-dotenv",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "ruff>=0.5",
]
