[project]
name = "chatbot-base"
version = "0.1.0"
description = "A venting box that transforms your pain points into actionable items"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "langchain>=0.3.9",
    "langchain-core>=0.3.59",
    "langgraph",
    "langgraph-cli[inmem]",
    "langchain-openai",
    "python-dotenv",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "ruff>=0.5",
]
